# lora-hacks

./: CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.lorawan  VERSION  bluetooth.conf  bme680.conf  bme680.overlay  dht11.overlay  dht22.overlay  external_dcdc.conf  external_sensor_power.overlay  fota.conf  garage.conf  garage.overlay  ir_led.conf  ir_led.overlay  mcuboot_fota_signing_key.pem  mcumgr.conf  prj.conf  prj_debug.conf  sample.yaml  sysbuild_fota.conf  thread_analyser.conf
app/src/: adc.c  adc.h  bluetooth.c  bluetooth.h  error_messages.c  error_messages.h  garage.c  garage.h  hfclk.c  hfclk.h  ir_led.c  ir_led.h  leds.c  leds.h  lora.c  lora.h  main.c  nrf51_amli.c  nrf51_amli.h  peripherals.c  peripherals.h  sensor.c  sensor.h  settings.c  settings.h  shell.c  smp_lorawan.c  watchdog.c  watchdog.h
app/sysbuild/mcuboot/: garage.overlay  prj.conf
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.nrfx  adc_nrfx_adc_internal.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/aosong/: CMakeLists.txt  Kconfig
drivers/sensor/aosong/dht/: CMakeLists.txt  Kconfig  dht.c
subsys/: CMakeLists.txt  Kconfig
subsys/mgmt/: CMakeLists.txt
subsys/mgmt/mcumgr/: Kconfig
subsys/mgmt/mcumgr/transport/: CMakeLists.txt  Kconfig  Kconfig.lora
subsys/mgmt/mcumgr/transport/src/: smp_lora.c
